--- a/index.html
+++ b/index.html
@@ -5,84 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Produtos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+        /* Estilos aqui */
         .header {
-            background-color: #fff;
-            padding: 20px;
             text-align: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px 0;
         }
+
         .header img {
-            max-width: 100%;
-            height: auto;
+            max-width: 200px;
         }
+
         .container {
-            width: 90%;
-            margin: 20px auto;
+            max-width: 800px;
+            margin: 0 auto;
         }
-        .container h2 {
-            margin-top: 20px;
-            color: #333;
-        }
+
         .product-card {
             display: flex;
             align-items: center;
-            background: #fff;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
+
         .product-card img {
-            max-width: 100px;
-            border-radius: 10px;
+            max-width: 150px;
             margin-right: 20px;
         }
+
         .product-info {
-            flex-grow: 1;
+            flex: 1;
         }
-        .product-info h2 {
-            margin: 0;
-            color: #333;
-            font-size: 1.2em;
-        }
-        .product-info p {
-            color: #666;
-            margin: 5px 0;
-        }
+
         .product-price {
-            color: #e74c3c;
-            font-size: 1.1em;
+            font-size: 1.2em;
             font-weight: bold;
+            margin-top: 10px;
         }
-        .quantity-controls {
-            display: flex;
-            align-items: center;
-        }
+
         .quantity-controls button {
-            background-color: #eee;
-            border: 1px solid #ccc;
-            padding: 5px 10px;
-            font-size: 1em;
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
             cursor: pointer;
-            margin: 0 5px;
+            border-radius: 5px;
         }
+
+        .quantity-controls span {
+            margin: 0 10px;
+        }
+
         .show-order-button {
             display: block;
-            width: 100%;
             text-align: center;
-            padding: 15px;
-            background-color: #28a745;
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.2em;
             margin-top: 20px;
+            font-size: 1.2em;
+            text-decoration: none;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
             border-radius: 5px;
+        }
+
+        .cart {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-top: 20px;
+        }
+
+        .cart h2 {
+            margin-top: 0;
+        }
+
+        .cart-item {
+            margin-bottom: 10px;
+        }
+
+        .cart-item p {
+            margin: 0;
         }
     </style>
 </head>
@@ -99,66 +103,79 @@
                 <h2>Chorizo Cara Preta</h2>
                 <p>Não vendemos por kg e sim por unidade</p>
                 <div class="product-price">R$ 99,90</div>
+                <button onclick="addToCart('Chorizo Cara Preta', 99.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button>-</button>
-                <span>1</span>
-                <button>+</button>
+                <button onclick="decreaseQuantity('chorizo')">-</button>
+                <span id="chorizo-quantity">1</span>
+                <button onclick="increaseQuantity('chorizo')">+</button>
             </div>
         </div>
-        <!-- Adicione mais produtos de Chorizo aqui -->
-    </div>
-    <div class="container">
-        <h2>Ancho</h2>
+        <!-- Adicione mais produtos aqui -->
+        <h2>Carnes para Churrasco</h2>
         <div class="product-card">
-            <img src="ancho1.jpg" alt="Ancho Estância 92">
+            <img src="carne1.jpg" alt="Picanha">
             <div class="product-info">
-                <h2>Ancho Estância 92</h2>
-                <p>Preço da unidade / Não vendemos por kg</p>
-                <div class="product-price">R$ 59,90</div>
-            </div>
-            <div class="quantity-controls">
-                <button>-</button>
-                <span>1</span>
-                <button>+</button>
-            </div>
-        </div>
-        <!-- Adicione mais produtos de Ancho aqui -->
-    </div>
-    <div class="container">
-        <h2>Brisket</h2>
-        <div class="product-card">
-            <img src="brisket1.jpg" alt="Brisket">
-            <div class="product-info">
-                <h2>Brisket</h2>
-                <p>Preço da Unidade / Não vendemos por kg</p>
+                <h2>Picanha</h2>
+                <p>Picanha uruguaia, kg.</p>
                 <div class="product-price">R$ 79,90</div>
+                <button onclick="addToCart('Picanha', 79.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button>-</button>
-                <span>1</span>
-                <button>+</button>
+                <button onclick="decreaseQuantity('picanha')">-</button>
+                <span id="picanha-quantity">1</span>
+                <button onclick="increaseQuantity('picanha')">+</button>
             </div>
         </div>
-        <!-- Adicione mais produtos de Brisket aqui -->
-    </div>
-    <div class="container">
-        <h2>Costelinhas</h2>
+        <!-- Adicione mais produtos aqui -->
+        <h2>Embutidos</h2>
         <div class="product-card">
-            <img src="costelinha1.jpg" alt="Costelinha Suína Barbecue">
+            <img src="embutido1.jpg" alt="Salame">
             <div class="product-info">
-                <h2>Costelinha Suína Barbecue</h2>
-                <p>Preço da Unidade / Não vendemos por kg</p>
-                <div class="product-price">R$ 49,90</div>
+                <h2>Salame Italiano</h2>
+                <p>Salame fatiado, 100g.</p>
+                <div class="product-price">R$ 12,90</div>
+                <button onclick="addToCart('Salame Italiano', 12.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button>-</button>
-                <span>1</span>
-                <button>+</button>
+                <button onclick="decreaseQuantity('salame')">-</button>
+                <span id="salame-quantity">1</span>
+                <button onclick="increaseQuantity('salame')">+</button>
             </div>
         </div>
-        <!-- Adicione mais produtos de Costelinha aqui -->
-    </div>
-    <a href="mostrar-pedido.html" class="show-order-button">Mostrar pedido (3)</a>
-</body>
-</html>
+        <!-- Adicione mais produtos aqui -->
+        <h2>Bebidas</h2>
+        <div class="product-card">
+            <img src="bebida1.jpg" alt="Vinho">
+            <div class="product-info">
+                <h2>Vinho Tinto</h2>
+                <p>Vinho tinto nacional, 750ml.</p>
+                <div class="product-price">R$ 35,90</div>
+                <button onclick="addToCart('Vinho Tinto', 35.90)">Adicionar ao Carrinho</button>
+            </div>
+            <div class="quantity-controls">
+                <button onclick="decreaseQuantity('vinho')">-</button>
+                <span id="vinho-quantity">1</span>
+                <button onclick="increaseQuantity('vinho')">+</button>
+            </div>
+        </div>
+        <!-- Adicione mais produtos aqui -->
+        <h2>Acompanhamentos</h2>
+        <div class="product-card">
+            <img src="acompanhamento1.jpg" alt="Farofa">
+            <div class="product-info">
+                <h2>Farofa de Mandioca</h2>
+                <p>Farofa temperada, 500g.</p>
+                <div class="product-price">R$ 9,90</div>
+                <button onclick="addToCart('Farofa de Mandioca', 9.90)">Adicionar ao Carrinho</button>
+            </div>
+            <div class="quantity-controls">
+                <button onclick="decreaseQuantity('farofa')">-</button>
+                <span id="farofa-quantity">1</span>
+                <button onclick="increaseQuantity('farofa')">+</button>
+            </div>
+        </div>
+        <!-- Adicione mais produtos aqui -->
+        <h2>Molhos</h2>
+        <div class="product-card">
+            <img src="molho1.jpg"
