--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                 <button onclick="addToCart('Picanha', 79.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button onclick="decreaseQuantity('picanha')">-</button>
-                <span id="picanha-quantity">1</span>
-                <button onclick="increaseQuantity('picanha')">+</button>
+                <button onclick="decreaseQuantity('Picanha')">-</button>
+                <span id="Picanha-quantity">1</span>
+                <button onclick="increaseQuantity('Picanha')">+</button>
             </div>
         </div>
         <!-- Adicione mais produtos aqui -->
@@ -138,9 +138,9 @@
                 <button onclick="addToCart('Salame Italiano', 12.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button onclick="decreaseQuantity('salame')">-</button>
-                <span id="salame-quantity">1</span>
-                <button onclick="increaseQuantity('salame')">+</button>
+                <button onclick="decreaseQuantity('Salame')">-</button>
+                <span id="Salame-quantity">1</span>
+                <button onclick="increaseQuantity('Salame')">+</button>
             </div>
         </div>
         <!-- Adicione mais produtos aqui -->
@@ -154,9 +154,9 @@
                 <button onclick="addToCart('Vinho Tinto', 35.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button onclick="decreaseQuantity('vinho')">-</button>
-                <span id="vinho-quantity">1</span>
-                <button onclick="increaseQuantity('vinho')">+</button>
+                <button onclick="decreaseQuantity('Vinho')">-</button>
+                <span id="Vinho-quantity">1</span>
+                <button onclick="increaseQuantity('Vinho')">+</button>
             </div>
         </div>
         <!-- Adicione mais produtos aqui -->
@@ -170,12 +170,6 @@
                 <button onclick="addToCart('Farofa de Mandioca', 9.90)">Adicionar ao Carrinho</button>
             </div>
             <div class="quantity-controls">
-                <button onclick="decreaseQuantity('farofa')">-</button>
-                <span id="farofa-quantity">1</span>
-                <button onclick="increaseQuantity('farofa')">+</button>
-            </div>
-        </div>
-        <!-- Adicione mais produtos aqui -->
-        <h2>Molhos</h2>
-        <div class="product-card">
-            <img src="molho1.jpg"
+                <button onclick="decreaseQuantity('Farofa')">-</button>
+                <span id="Farofa-quantity">1</span>
+                <button onclick="increaseQuantity('Farofa
