--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
         }
 
         .product-card img {
@@ -174,7 +176,4 @@
                 <h2>Farofa de Mandioca</h2>
                 <p>Farofa temperada, 500g.</p>
                 <div class="product-price">R$ 9,90</div>
-                <button onclick="addToCart('Farofa de Mandioca', 9.90)">Adicionar ao Carrinho</button>
-            </div>
-            <div class="quantity-controls">
-                <button onclick="decreaseQuantity('Farofa de Mandioca')">
+                <button onclick="addToCart('Farofa de Mandioca', 9.90)">Adicionar ao Carr
