--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
 
         .header {
             text-align: center;
             padding: 20px 0;
+            background-color: #333;
+            color: white;
         }
 
         .header img {
@@ -31,8 +34,10 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #ddd;
+            background-color: white;
             padding: 10px;
+            border-radius: 5px;
         }
 
         .product-card img {
@@ -66,6 +71,7 @@
 
         .quantity-controls span {
             margin: 0 10px;
+            font-size: 1.2em;
         }
 
         .show-order-button {
@@ -176,4 +182,4 @@
                 <h2>Farofa de Mandioca</h2>
                 <p>Farofa temperada, 500g.</p>
                 <div class="product-price">R$ 9,90</div>
-                <button onclick="addToCart('Farofa de Mandioca', 9.90)">Adicionar ao Carr
+                <button onclick="addToCart('Farofa
